test/spec_vectors/exports/ok/module_1.wat
(module (func) (export "a" (func 0)) (export "b" (func 0)))