test/spec_vectors/exports/fail/module_18.wat
(module (func) (export "a" (func 0)) (export "a" (func 0)))